deployment/ornn-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ornn-web
  namespace: ${NAMESPACE}
spec:
  selector:
    app: ornn-web
  ports:
    - name: http
      port: 80
      targetPort: 80
